fix: num el on wishlist icon mobile

--- a/components/Navbar/styles.module.scss
+++ b/components/Navbar/styles.module.scss
@@ -43,7 +43,7 @@
         cursor: pointer;
         position: relative;
         p {
-          top: 3px;
+          top: 4px;
           left: 8.5px;
         }
       }
